Return a whole sync object on creation to avoid tricks in Front (#754)
